# substreams-ethereum

./: .gitignore  .goreleaser.yaml  .sfreleaser  CHANGELOG.md  Cargo.toml  NOTICE  NOTICE.md  README.md  RELEASE.md  buf.gen.yaml  build.rs  gen.sh  rust-toolchain.toml
.github/workflows/: audit.yml  push.yml
abigen/: Cargo.toml
abigen-tests/: Cargo.toml  build.rs
abigen-tests/abi/: tests.json
abigen-tests/src/: lib.rs
abigen-tests/src/abi/: README.md  mod.rs  tests.rs
abigen/src/: assertions.rs  build.rs  contract.rs  event.rs  function.rs  lib.rs
core/: Cargo.toml
core/examples/: build.rs
core/src/: .gitignore  block_view.rs  event.rs  externs.rs  function.rs  lib.rs  rpc.rs  scalar.rs
core/src/pb/: generated.rs  mod.rs  sf.ethereum.r#type.v1.rs  sf.ethereum.substreams.v1.rs  sf.ethereum.type.v1.rs  sf.ethereum.type.v2.rs
derive/: Cargo.toml
derive/src/: contract.rs  lib.rs
substreams-ethereum/: Cargo.toml
substreams-ethereum/src/: lib.rs
