[package]
name = "substreams-ethereum-abigen-tests"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
doc = false

[dependencies]
ethabi = "17.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
prost = "^0.11.0"
prost-types = "^0.11.0"
substreams = "^0.5.0"
substreams-ethereum = { workspace = true }

[build-dependencies]
anyhow = "1"
substreams-ethereum = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
