[package]
name = "substreams-ethereum-abigen"
version = "0.1.4"
edition = "2021"
description = "Substreams development kit for Ethereum chains, contains Firehose Block model and helpers as well as utilities for Ethereum ABI encoding/decoding."
homepage = "https://github.com/streamingfast/substreams-ethereum"
repository = "https://github.com/streamingfast/substreams-ethereum"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "ethereum", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
anyhow = "1"
ethabi = "17.0"
heck = "0.4"
hex = "0.4"
syn = { version = "1.0.95", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
prettyplease = "0.1"
substreams-ethereum-core = { version = "0.1.4", path = "../core" }

[dev-dependencies]
pretty_assertions = "1.2.1"