[package]
name = "substreams-ethereum-abigen"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
ethabi = "17.0"
heck = "0.4"
hex = "0.4"
syn = { version = "1.0.95", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
prettyplease = "0.1"

[dev-dependencies]
pretty_assertions = "1.2.1"
substreams = "^0.5.0"
