[package]
name = "substreams-ethereum-core"
version = "0.1.4"
edition = "2021"
description = "Substreams development kit for Ethereum chains, contains Firehose Block model and helpers as well as utilities for Ethereum ABI encoding/decoding."
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-ethereum/tree/develop/core"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "ethereum", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
ethabi = "17.0"
prost = { version = "0.10.1" }
prost-types = "0.10.1"
substreams = { git = "https://github.com/streamingfast/substreams", branch = "develop" }

[build-dependencies]
prost-build = "0.10.1"

[dev-dependencies]
anyhow = "1"