[package]
name = "substreams-ethereum-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ethabi = "17.0"
prost = "^0.13"
prost-types = "^0.13"
substreams = "0.6"
num-bigint = "0.4"
bigdecimal = "0.3"

[build-dependencies]
prost-build = "^0.11.0"

[dev-dependencies]
anyhow = "1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.10", features = ["custom"] }
