[package]
name = "substreams-ethereum-derive"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doc = false

[dependencies]
ethabi = "17.0"
heck = "0.4"
hex = "0.4"
syn = { version = "1.0.13", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
num-bigint = "0.4"
substreams-ethereum-abigen = { workspace = true }

[dev-dependencies]
prettyplease = "0.1"
pretty_assertions = "1.2.1"
