[package]
name = "substreams-ethereum"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
num-bigint = "0.4.3"
substreams = "^0.5.0"
substreams-ethereum-abigen = { workspace = true }
substreams-ethereum-derive = { workspace = true }
substreams-ethereum-core = { workspace = true }

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.10", features = ["custom"] }

[dev-dependencies]
anyhow = "1"
ethabi = "17"
